# research-agent-

./: README.md  pyproject.toml
src/aiagent/: api.py  crew.py  main.py
src/aiagent/config/: agents.yaml  tasks.yaml
src/aiagent/tools/: custom_tool.py
