[project]
name = "aiagent"
version = "0.1.0"
description = "aiAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
aiagent = "aiagent.main:run"
run_crew = "aiagent.main:run"
train = "aiagent.main:train"
replay = "aiagent.main:replay"
test = "aiagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
